# bs-map-downloader

./: .gitignore  README.md  TODO.md  pyproject.toml
bs_map_downloader/: downloader.py  main.py
bs_map_downloader/sources/: __init__.py  beatleader.py  scoresaber.py
src/bs_map_downloader/: __init__.py  main.py  models.py
src/bs_map_downloader/sources/: beatleader.py  beatsaver.py
tests/: test_beatleader.py  test_beatsaver.py  test_downloader.py  test_models.py  test_scoresaber.py
