[project]
name = "bs-map-downloader"
version = "0.1.0"
description = "Async scraper that builds a Beat Saber map dataset by downloading ranked maps from multiple leaderboard sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
bs-map-downloader = "bs_map_downloader.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
